# health-misinfo-shared

./: .env.backend.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  compose.yaml  llm_responses_natural_remedies_x5.csv  llm_responses_natural_remedies_x5.jsonl  pyproject.toml
.github/workflows/: ci.yml
ansible/: requirements.yml
ansible/inventories/: hosts
ansible/playbooks/: docker_deploy.yaml  nginx_docker.yaml
data/: MVP_labelled_claims_1.csv  MVP_labelled_claims_2.csv  MVP_labelled_claims_3.csv  MVP_labelled_claims_4.csv  full_in_context_labelled_data.csv  multi_label_training_v1.csv  multi_label_training_v1.json  train_data_v2.json  training_set.csv  training_set_v2.csv
data/captions/: README.md
data/known_misinfo/: video_ids.json
data/videos/: tiktoks.txt
dev/: import_data.py  populate_db.py  run_youtube_downloading.sh
dev/multimodal/: README.md  download_videos.py  gemini.py  multimodal.py  multimodal_analyser.py  prompts.py  run_multimodal_on_tiktoks.py
dev/prompt_evaluation/: README.md  ed_autosxs_tests.py  ed_make_eval_set.py  ed_promptfoo_tests.py  promptfooconfig.yaml  prompts.txt  tests.csv  tests.py
evaluation/: README.md  assert_check_format.py  assert_evaluation_metrics.py  assert_quotes_contained_in_chunk.py  checking_if_quotes_are_in_chunk.py  comparing_prompt_with_and_without_context.py  config_check_quotes_in_chunk.yaml  config_compare_in_to_no_context.yaml  evaluation.py  promptfooconfig.yaml
src/health_misinfo_shared/: app.py  claim_format_checker.py  data_parsing.py  evaluation.py  find_claims_within_captions.py  fine_tuning.py  label_scoring.py  prompts.py  vertex.py  youtube_api.py
src/health_misinfo_shared/frontend/src/: App.css  App.js
src/raphael_backend_flask/: app.py  auth.py  database.db  db.py  exceptions.py  gunicorn_config.py  health_misinfo_shared  helpers.py  llm.py  multimodal.py  process.py  prompts.py  routes.py  template_filters.py  transcript.py  vertex.py  youtube.py
src/raphael_backend_flask/migrations/: 1.sql  2.sql
src/raphael_backend_flask/static/: extra-style.css  ff-style.css
src/raphael_backend_flask/templates/: base.html  home.html  multimodal_analysis.html  transcript_analysis.html  video_analysis.html
src/raphael_frontend_react/: nginx.conf
src/raphael_frontend_react/public/: index.html
src/raphael_frontend_react/src/: App.js
tests/health_misinfo_shared/: _test_fine_tuning.py  test_claim_formatting.py  test_data_parsing.py  test_fine_tuning.py
tests/health_misinfo_shared/evaluation/: test_assert_check_format.py  test_assert_evaluation_metrics.py  test_assert_quotes_contained_in_chunk.py
tests/raphael_backend_flask/: test_process.py
tools/db/: __main__.py
