[tool.poetry]
name = "raphael"
version = "0.0.1"
description = "Health misinformation from videos"
authors = ["Full Fact","Google"]
readme = "README.md"
license = "Proprietary"
packages = [
  { include = "health_misinfo_shared", from="src" },
  { include = "tools" }
] # top level directory

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-dotenv = "^1.0.0"
structlog = "^23.1.0"
pydantic = ">1.7"
google-cloud-aiplatform = "^1.38"
pandas = "1.5"

# For youtube access:
google-api-python-client="^2.118.0"
google-auth-oauthlib="^1.2.0"
google-auth-httplib2="^0.2.0"
langdetect="^1.0.9"
pyarrow = "^15.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
debugpy = "^1.6.7"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = ">0.9"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
filterwarnings = [
    # "ignore:Deprecated call to `pkg_resources.declare_namespace\\('.*'\\):DeprecationWarning",
    # "ignore::DeprecationWarning:google.rpc",
    # "ignore:Call to deprecated function _.*:schematics.deprecated.SchematicsDeprecationWarning", # Schematics internal warnings
    # "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
] # Ignore some noisy and unfixable warnings

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_calls = true
check_untyped_defs = true
